cmake_minimum_required(VERSION 3.24)
project(HomeAssignment_2)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(HomeAssignment_2
        problem1.cpp
        problem1.h
        problem2.cpp
        problem2.h
        problem3.cpp
        problem3.h
        project4.cpp
        project4.h
        project5.cpp
        project5.h
        project6.cpp
        project6.h)
