cmake_minimum_required(VERSION 3.24)
project(HomeAssignment_2)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(HomeAssignment_2
        problem1.cpp
        problem1.h
        problem2.cpp
        problem2.h
        problem3.cpp
        problem3.h
        problem4.cpp
        problem4.h
        problem5.cpp
        problem5.h
        problem6.cpp
        problem6.h)
